z-index bug fix

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -21,6 +21,7 @@
 
     background-color: white;
 
+    z-index: 5;
     &__header {
         display: flex;
         justify-content: space-between;
